upgraded cordova to 6.2 bumped version to 0.2.9 (1.0.0-pre) fixed issue #119 (viewing options button getting cut off) added VIIRS data layer (issue #118) fix for issue #112 (setting buttons not working if legend/time slider open) inverted legend (issue #111) updated delete confimation text (issue #107) updated geomac layer to use names instead of indexes (issue #104) fixed links not opening (issue #98) fixed iOS issue of outputs not ordering properly (issue #97) fixed scalebar issue on iOS (issue #96) fixed legend issue on screen rotate (issue #95) swiched scalebar to miles (issue #91)

--- a/WindNinja-Mobile/www/css/map.less
+++ b/WindNinja-Mobile/www/css/map.less
@@ -9,7 +9,8 @@ body,
 }
 
 #map {
-	position: fixed;
+	position: absolute;
+	top: 44px;
 }
 
 #btn_GPS {
@@ -85,6 +86,8 @@ body,
 
 #pnl_legend-popup {
 	z-index: 1000 !important;
+	bottom: 100px !important;
+	top: unset !important;
 }
 
 #foot {
